# personal_finance_calculator

./: .gitignore  Expense.py  LICENSE  Ledger.py  README.md  add_expense.py  clear_screen.py  constants.py  enter_income.py  exit_program_menu.py  format_expense.py  is_non_empty_string.py  is_positive_number.py  main.py  main_menu.py  manage_expenses_menu.py  pyproject.toml  remove_expense.py  requirements.txt  to_sterling.py  view_budget.py
